@@ -1,3 +1,7 @@
+2002-08-03  Wakaba <w@suika.fam.cx>
+
+	* Status.pm: New module.
+
 2002-08-01  Wakaba <w@suika.fam.cx>
 
 	* Unstructured.pm: Rewritten.
